# backend_service_upload_files

./: .dockerignore  .gitignore  convnter.py  docker-compose.yml  example.csv  main.py  pyproject.toml  worker.py
app/: api.py  config.py  produsser.py  rabbitmq.py  schemas.py  storage.py  uploaded_file.py
app/api/endpoints/: assessment.py  batch.py  type_markup.py
app/api/schemas/: batch_schema.py  type_markup_schemas.py
app/core/: config.py  database.py  models.py
app/core/model.py/: assessment_model.py  batch_model.py
app/repositories/: base.py  batch.py  type_markup.py
app/schemas/: batch_schema.py  type_markup_schemas.py
app/utils/: check_auth.py  exceptions.py  uploaded_file.py
